--- a/Section4-Multipage Websites/Computer File Paths/Folder0/index.html
+++ b/Section4-Multipage Websites/Computer File Paths/Folder0/index.html
@@ -1,10 +1,15 @@
 <h1>All the Animals</h1>
 <h2>Rabbit:</h2>
+<img src="./rabbit.png" alt="Picture of a rabbit" />
 
 <h2>Cat:</h2>
+<img src="./Folder3/cat.png" alt="Picture of a cat" />
 
 <h2>Dog:</h2>
+<img src="../dog.png" alt="Picture of a dog" />
 
 <h2>Fish:</h2>
+<img src="../Folder1/fish.png" alt="Picture of a fish" />
 
 <h2>Bird:</h2>
+<img src="../Folder1/Folder2/bird.png" alt="Picture of a bird" />
