--- a/Section5-Introduction to CSS/Adding CSS/addingcss_internal.html
+++ b/Section5-Introduction to CSS/Adding CSS/addingcss_internal.html
@@ -6,7 +6,7 @@
      <title>Document</title>
      <style>
           html{
-               background: blue;
+               background: red;
           }
      </style>
 </head>
